fix: side menu not responsive on mobile devices i.e. height

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -60,12 +60,12 @@
 
 
 aside.main-sidebar {
-  border-right: 1px solid $side-menu-border-left;
-  padding: 4px 0 15px 10px;
+  padding: 0 0 15px 10px;
   background-color: white;
+  bottom: 0;
+  border-right: 1px solid $side-menu-border-left;
 
   .sidebar-menu-wrapper {
-    height: 90vh;
     padding-bottom: 50px;
   }
 
@@ -127,6 +127,7 @@ main.main-content {
 
     .breadcrumb-container {
       height: 30px;
+      overflow: hidden;
 
       .breadcrumb {
         padding-left: 0;
@@ -134,6 +135,8 @@ main.main-content {
 
         .breadcrumb-item {
           text-transform: capitalize;
+          text-overflow: clip;
+          white-space: nowrap;
 
           a {
             text-decoration: none;
@@ -164,9 +167,12 @@ main.main-content {
       min-width: 25%;
       max-width: 235px;
       padding-left: 8px !important;
-      padding-top: 65px;
+      padding-top: 55px;
       margin-bottom: -170px;
       z-index: 1;
+    }
+    .sidebar-menu-wrapper{
+      padding-top: 5px;
     }
   }
 }
@@ -180,6 +186,13 @@ main.main-content {
   .page-header-container {
     h1 {
       font-size: 1.375rem !important;
+    }
+  }
+
+  aside.main-sidebar {
+    .sidebar-menu-wrapper {
+      height: 90vh;
+      padding-top: 5px;
     }
   }
 }
